--- a/Astrostatistics_Lecture02_20210304.ipynb
+++ b/Astrostatistics_Lecture02_20210304.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Astrostatistics_Lecture02_20210304.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMC1VnHv1yPcWPZ/4JKQ6TL",
+      "authorship_tag": "ABX9TyON5YzOpAFFB4jMyM3FUXa8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/sundarjhu/Astrostatistics2021/blob/main/Astrostatistics_Lecture02_20210304.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2NlXLxnHIU6l"
+      },
+      "source": [
+        "seed = 10001 #set the random seed for subsequent calls to random-number generators"
+      ],
+      "execution_count": 26,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -43,11 +54,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YMwSfX0EtrnB",
-        "outputId": "56dd443f-a8cf-4b89-98c7-ac364f44362c"
+        "outputId": "7695a75b-4e44-4411-9309-f2ab073cfc98"
       },
       "source": [
         "import numpy as np\n",
-        "seed = 10001\n",
         "outcomes = [1, 2, 3, 4, 5, 6] #Sample space for single die roll\n",
         "samples = [10, 100, 1000, 10000, 100000, 1000000]\n",
         "average = []\n",
@@ -62,7 +72,7 @@
         "for N, sm in zip(samples, average):\n",
         "  print(N, np.round(sm, decimals = 3))"
       ],
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,15 +90,49 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "WLTEz38TxoqB"
+        "id": "5-LWrxuLId0W"
       },
       "source": [
-        ""
+        "##Demonstrating the properties of the mean and variance\n",
+        "###The expectation value of (a random variable plus a constant) is the population mean of the random variable plus the constant.\n",
+        ">Why? Because (a) the expectation value is a linear operator, and (b) the expectation value of a constant is that constant.\n",
+        "###The variance of (a random variable plus a constant) is the variance of the random variable.\n",
+        ">Why? Because (a) the variance is a linear operator, and (b) the variance of a constant is zero."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WLTEz38TxoqB",
+        "outputId": "03b2aec0-0ce4-4312-cf31-7d191390bc98"
+      },
+      "source": [
+        "import numpy as np\n",
+        "np.random.seed(seed)\n",
+        "x = np.random.uniform(size = 20) #sample of 20 uniform random numbers between 0 and 1 (Expectation value = 0.5)\n",
+        "print(\"The sample mean is {}\".format(np.round(x.mean(), decimals = 3)))\n",
+        "print(\"The sample variance is {}\".format(np.round(x.var(), decimals = 3)))\n",
+        "print(\"The sample mean of x + 3 is {}\".format(np.round((x + 3).mean(), decimals = 3))) #should be 3 + x.mean()\n",
+        "print(\"The sample variance of x + 3 is {}\".format(np.round((x + 3).var(), decimals = 3))) # should be x.var()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The sample mean is 0.497\n",
+            "The sample variance is 0.068\n",
+            "The sample mean of x + 3 is 3.497\n",
+            "The sample variance of x + 3 is 0.068\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
