--- a/Astrostatistics_Lecture02_20210304.ipynb
+++ b/Astrostatistics_Lecture02_20210304.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Astrostatistics_Lecture02_20210304.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyON5YzOpAFFB4jMyM3FUXa8",
+      "authorship_tag": "ABX9TyNSvgLZurH7pBkAdw61DAUe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       "source": [
         "seed = 10001 #set the random seed for subsequent calls to random-number generators"
       ],
-      "execution_count": 26,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YMwSfX0EtrnB",
-        "outputId": "7695a75b-4e44-4411-9309-f2ab073cfc98"
+        "outputId": "0f026cbd-e588-4599-cfaa-fd4c78bf371e"
       },
       "source": [
         "import numpy as np\n",
@@ -63,7 +63,7 @@
         "average = []\n",
         "for N in samples:\n",
         "  #Roll die N times, choosing a random outcome each time\n",
-        "  np.random.seed(seed)\n",
+        "  np.random.seed(seed)             #for reproducibility\n",
         "  X = np.random.choice(outcomes, size = N)\n",
         "  #Saving the sample average\n",
         "  average.append(X.mean())\n",
@@ -72,7 +72,7 @@
         "for N, sm in zip(samples, average):\n",
         "  print(N, np.round(sm, decimals = 3))"
       ],
-      "execution_count": 27,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,18 +109,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WLTEz38TxoqB",
-        "outputId": "03b2aec0-0ce4-4312-cf31-7d191390bc98"
+        "outputId": "9593e12e-1797-4968-9e48-6d3c4aa52318"
       },
       "source": [
         "import numpy as np\n",
-        "np.random.seed(seed)\n",
+        "np.random.seed(seed)             #for reproducibility\n",
         "x = np.random.uniform(size = 20) #sample of 20 uniform random numbers between 0 and 1 (Expectation value = 0.5)\n",
         "print(\"The sample mean is {}\".format(np.round(x.mean(), decimals = 3)))\n",
         "print(\"The sample variance is {}\".format(np.round(x.var(), decimals = 3)))\n",
         "print(\"The sample mean of x + 3 is {}\".format(np.round((x + 3).mean(), decimals = 3))) #should be 3 + x.mean()\n",
         "print(\"The sample variance of x + 3 is {}\".format(np.round((x + 3).var(), decimals = 3))) # should be x.var()"
       ],
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,6 +133,176 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jorxbtxsXdml"
+      },
+      "source": [
+        "##Evaluating the covariance matrix for three correlated random variables\n",
+        "\n",
+        "####$X$ is a random variable, and $Y$ and $Z$ are functions of $X$:\n",
+        ">$Y = X^2; Z = 1 / X$.\n",
+        "####$Y$ is therefore positively correlated with $X$, and $Z$ is negatively correlated with it.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I030c8EwXeM9",
+        "outputId": "a0697bf8-d106-4649-da5c-fa6c8f5b8425"
+      },
+      "source": [
+        "import numpy as np\n",
+        "np.random.seed(seed)             #for reproducibility\n",
+        "x = np.random.uniform(size = 20) #sample of 20 uniform random numbers between 0 and 1\n",
+        "y = x**2; z = 1/x                #positively- and anti-correlated with x\n",
+        "X = np.array([x, y, z])          #20 samples of a 4-element random vector\n",
+        "print(\"The covariance matrix for the two variables is:\")\n",
+        "print(np.round(np.cov(X), decimals = 2))"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The covariance matrix for the two variables is:\n",
+            "[[ 0.07  0.07 -0.72]\n",
+            " [ 0.07  0.07 -0.6 ]\n",
+            " [-0.72 -0.6  10.91]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ve7pFmT2ZiTW"
+      },
+      "source": [
+        "##Evaluating the covariance matrix for two independent random variables\n",
+        "###$x$ and $w$ are built from independent calls to np.random.uniform.\n",
+        "###Expectation: the covariance matrix is diagonal (off-diagonal elements should be close to zero)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3b5FQKHPXsee",
+        "outputId": "767196ba-3ed2-4232-ea71-222543eb70f1"
+      },
+      "source": [
+        "samples = [10, 1000, 10000, 1000000]\n",
+        "for N in samples:\n",
+        "  np.random.seed(seed)             #for reproducibility\n",
+        "  x = np.random.uniform(size = N)  #sample of N uniform random numbers between 0 and 1\n",
+        "  np.random.seed(seed + 1)         #for reproducibility and independence\n",
+        "  w = np.random.uniform(size = N)  #no correlation expected with x\n",
+        "  print(\"*****Covariance matrix from {} samples\".format(N))\n",
+        "  print(np.cov(np.array([x, w])))\n",
+        "  print(\"-----\")"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "*****Covariance matrix from 10 samples\n",
+            "[[0.08343402 0.00593563]\n",
+            " [0.00593563 0.08128469]]\n",
+            "-----\n",
+            "*****Covariance matrix from 1000 samples\n",
+            "[[ 0.08345954 -0.00303727]\n",
+            " [-0.00303727  0.0817306 ]]\n",
+            "-----\n",
+            "*****Covariance matrix from 10000 samples\n",
+            "[[ 8.28494090e-02 -9.95351161e-05]\n",
+            " [-9.95351161e-05  8.45424787e-02]]\n",
+            "-----\n",
+            "*****Covariance matrix from 1000000 samples\n",
+            "[[8.33598815e-02 1.33373657e-05]\n",
+            " [1.33373657e-05 8.33893600e-02]]\n",
+            "-----\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Lx4E7xvbuDo"
+      },
+      "source": [
+        "##Evaluating the Pearson Correlation Coefficient\n",
+        "###We define $Y = X^2$ and $Z = 1/X$\n",
+        "###Let's evaluate Pearson's Correlation Coefficient between each pair of variables.\n",
+        ">We do this in two ways -- from the definition of the covariance, and then using the np.corrcoef method."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GltGRwkHZHOG",
+        "outputId": "eda6e603-146b-446d-a6df-866e9dc23eec"
+      },
+      "source": [
+        "import numpy as np\n",
+        "np.random.seed(seed)\n",
+        "N = 1000000\n",
+        "x = np.random.uniform(size = N); y = x**2; z = 1/x\n",
+        "np.random.seed(seed + 1)\n",
+        "w = np.random.uniform(size = N)\n",
+        "Sigma = np.cov(np.array([x, y, z, w]))\n",
+        "X = np.array([x, y, z, w])\n",
+        "vnames = ['X', 'Y', 'Z', 'W']\n",
+        "#The following should return the same value}\n",
+        "i = 0 #compare other variables to X\n",
+        "for j in [0, 1, 2, 3]:\n",
+        "  cc1 = Sigma[i, j] / np.sqrt(Sigma[i,i] * Sigma[j,j])\n",
+        "  print(\"Correlation coefficient ({}, {}) from definition of covariance: {}\".format(vnames[i], vnames[j], np.round(cc1, decimals = 3)))\n",
+        "  cc2 = np.corrcoef(X[i], y = X[j])[0, 1]\n",
+        "  print(\"Correlation coefficient ({}, {}) from definition of covariance: {}\".format(vnames[i], vnames[j], np.round(cc2, decimals = 3)))"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Correlation coefficient (X, X) from definition of covariance: 1.0\n",
+            "Correlation coefficient (X, X) from definition of covariance: 1.0\n",
+            "Correlation coefficient (X, Y) from definition of covariance: 0.968\n",
+            "Correlation coefficient (X, Y) from definition of covariance: 0.968\n",
+            "Correlation coefficient (X, Z) from definition of covariance: -0.021\n",
+            "Correlation coefficient (X, Z) from definition of covariance: -0.021\n",
+            "Correlation coefficient (X, W) from definition of covariance: 0.0\n",
+            "Correlation coefficient (X, W) from definition of covariance: 0.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p0BFpHyVbqIH"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
