--- a/Astrostatistics_Lecture03_20210310.ipynb
+++ b/Astrostatistics_Lecture03_20210310.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Astrostatistics_Lecture03_20210310.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNk/5khoDqJJvu1oBybtQ5s",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyM4PqHU0yZJ2f6jr0vjDi88",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,7 +165,8 @@
         "####Modify the code above to the following questions:\n",
         "1) For N = 14, p = 0.4, what is the probability of k = 6 successes?<br>\n",
         "2) For N = 14, p = 0.4, what is the probability of having k > 2 successes?<br>\n",
-        "3) For N = 14, p = 0.4, for what k is the probability of ≤ k successes at least 0.75?"
+        "3) For N = 14, p = 0.4, for what k is the probability of ≤ k successes at least 0.75?\n",
+        "4) For N = 20, p = 0.65, what is the probability of having k >= 12 successes?"
       ]
     },
     {
