--- a/Astrostatistics_Lecture09_20210512.ipynb
+++ b/Astrostatistics_Lecture09_20210512.ipynb
@@ -6,7 +6,7 @@
       "name": "Astrostatistics_Lecture09_20210512.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOTvju8hLoU5P6K7ZGEQL70",
+      "authorship_tag": "ABX9TyP4yYzMw9xgFr2xfEpBKnWw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,9 +35,9 @@
       },
       "source": [
         "import numpy as np\n",
-        "from scipy.stats import norm"
+        "from scipy.stats import norm, t"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,6 +211,108 @@
       "cell_type": "code",
       "metadata": {
         "id": "CPl4UWbZYBhu"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0-GtGWcOONen"
+      },
+      "source": [
+        "#Module 3: Use methods from `scipy.stats.norm` to solve the following problems"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZmGSNwHeOTgf"
+      },
+      "source": [
+        "#A single measurement of the mass of a rock results in a value of 0.2 kg.\n",
+        "#The 1$\\sigma$ measurement uncertainty due to the resolution of the mass-measuring device is 0.05 kg.\n",
+        "\n",
+        "##1) Construct an 82\\% confidence interval on the true mass of the rock."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R0YdWhG5OSeL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IR0i-KHPPA69"
+      },
+      "source": [
+        "##2) What confidence is associated with the interval [0.00545, 0.3946] kg? What is the associated significance?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "97MECKagP85E"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lE0n7f2vO0LW"
+      },
+      "source": [
+        "#Module 4: Use methods from `scipy.stats.t` to solve the following problems"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dyLYKHQgO4uh"
+      },
+      "source": [
+        "#Three measurements of the rock's mass result in values of 0.2, 0.35, and 0.25 kg. The (constant, homoskedastic) measurement uncertainty is unknown.\n",
+        "##1) Compute the 95\\% confidence interval on the rock's true mass."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nvUI8H7ZO4Fc"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GQMQTmrnPyaJ"
+      },
+      "source": [
+        "##2) What confidence is associated with the interval [-0.0484, 0.5824] kg?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0GPaYNMkP2-b"
       },
       "source": [
         ""
