--- a/Astrostatistics_Lecture09_20210512.ipynb
+++ b/Astrostatistics_Lecture09_20210512.ipynb
@@ -6,7 +6,7 @@
       "name": "Astrostatistics_Lecture09_20210512.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP4yYzMw9xgFr2xfEpBKnWw",
+      "authorship_tag": "ABX9TyNFbgMGnOGiV7xx+CyJLCXc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "import numpy as np\n",
         "from scipy.stats import norm, t"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
         "id": "EuEVPbTtUjRl"
       },
       "source": [
-        "#Module 1: Use methods from `scipy.stats.norm` to solve the following problems"
+        "#**Module 1: Use methods from `scipy.stats.norm` to solve the following problems**"
       ]
     },
     {
@@ -66,7 +66,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
         "id": "UCcZEjEOXUoY"
       },
       "source": [
-        "#Module 2: Use methods from `scipy.stats.t` to solve the following problems"
+        "#**Module 2: Use methods from `scipy.stats.t` to solve the following problems**"
       ]
     },
     {
@@ -155,7 +155,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -215,7 +215,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
         "id": "0-GtGWcOONen"
       },
       "source": [
-        "#Module 3: Use methods from `scipy.stats.norm` to solve the following problems"
+        "#**Module 3: Use methods from `scipy.stats.norm` and `scipy.stats.t` to solve the following problems**"
       ]
     },
     {
@@ -233,8 +233,18 @@
         "id": "ZmGSNwHeOTgf"
       },
       "source": [
+        "#**Case 1: Normally-distributed variable with known variance**\n",
+        "\n",
         "#A single measurement of the mass of a rock results in a value of 0.2 kg.\n",
-        "#The 1$\\sigma$ measurement uncertainty due to the resolution of the mass-measuring device is 0.05 kg.\n",
+        "#The 1$\\sigma$ measurement uncertainty due to the resolution of the mass-measuring device is 0.05 kg."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CryqoQVYS0eV"
+      },
+      "source": [
         "\n",
         "##1) Construct an 82\\% confidence interval on the true mass of the rock."
       ]
@@ -247,7 +257,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -267,17 +277,8 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lE0n7f2vO0LW"
-      },
-      "source": [
-        "#Module 4: Use methods from `scipy.stats.t` to solve the following problems"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -285,8 +286,30 @@
         "id": "dyLYKHQgO4uh"
       },
       "source": [
-        "#Three measurements of the rock's mass result in values of 0.2, 0.35, and 0.25 kg. The (constant, homoskedastic) measurement uncertainty is unknown.\n",
-        "##1) Compute the 95\\% confidence interval on the rock's true mass."
+        "#**Case 2: Normally-distributed variable with unknown variance**\n",
+        "\n",
+        "#Three measurements of the rock's mass result in values of 0.2, 0.35, and 0.25 kg. The (constant, homoskedastic) measurement uncertainty is unknown."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E4M4NdHKT4kK"
+      },
+      "source": [
+        "m = np.array([0.2, 0.35, 0.25])"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nORytQ12TLpD"
+      },
+      "source": [
+        "##1) Estimate the population mean and standard deviation of the rock's mass.\n",
+        "##Make sure the standard deviation estimate is unbiased!!"
       ]
     },
     {
@@ -297,7 +320,27 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yixv_DJ4TH_r"
+      },
+      "source": [
+        "##2) Compute the 95\\% confidence interval on the rock's true mass."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qHPFuAUETKju"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -306,7 +349,7 @@
         "id": "GQMQTmrnPyaJ"
       },
       "source": [
-        "##2) What confidence is associated with the interval [-0.0484, 0.5824] kg?"
+        "##3) What confidence is associated with the interval [-0.0484, 0.5824] kg?"
       ]
     },
     {
@@ -317,7 +360,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     }
   ]
