--- a/Astrostatistics_Lecture09_20210512.ipynb
+++ b/Astrostatistics_Lecture09_20210512.ipynb
@@ -6,7 +6,7 @@
       "name": "Astrostatistics_Lecture09_20210512.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNFbgMGnOGiV7xx+CyJLCXc",
+      "authorship_tag": "ABX9TyN58KLSvF8Q32aO/AVjpruI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "import numpy as np\n",
         "from scipy.stats import norm, t"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -61,13 +61,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "57oXQ3_uT4E5"
+        "id": "57oXQ3_uT4E5",
+        "outputId": "1b80147f-9dd7-4cbf-f430-020a4c606b2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "#P(|Z|<a) = 0.5 ==> P(Z<-a) = CDF(-a)= (1-0.5)/2\n",
+        "a = -norm.ppf((1-0.5)/2)\n",
+        "print(\"a = {}\".format(np.round(a, decimals = 4)))"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a = 0.6745\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -81,13 +95,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2X3Qn2piURr9"
+        "id": "2X3Qn2piURr9",
+        "outputId": "82bf9bd1-e8c7-47fe-eca5-6dec81996494",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "#P(-2a < Z < a) = 1/2 * (erf(a/sqrt(2)) + erf(sqrt(2)*a))\n",
+        "#Find root of equation P(-2a < Z < a) - 0.75 == 0\n",
+        "from scipy.optimize import root_scalar\n",
+        "from scipy.special import erf\n",
+        "\n",
+        "def func(x):\n",
+        "  #Function to be minimised\n",
+        "  return 0.5 * (erf(x / np.sqrt(2)) + erf(np.sqrt(2) * x)) - 0.75\n",
+        "\n",
+        "#Set up root-finding algorithm with an initial bracket for $a$\n",
+        "soln = root_scalar(func, bracket = [-2, 2], method = 'bisect')\n",
+        "print(\"a = {}\".format(np.round(soln.root, decimals = 4)))"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a = 0.8336\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -101,13 +138,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AxBgozdwUWDW"
+        "id": "AxBgozdwUWDW",
+        "outputId": "c13f617e-a544-446c-8f5a-be574ad9265e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "a = -norm.ppf(0.1)\n",
+        "print(\"a = {}\".format(np.round(a, decimals = 4)))"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a = 1.2816\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -121,13 +171,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9i01xonGUaq6"
+        "id": "9i01xonGUaq6",
+        "outputId": "0bfbfd5c-da4d-40a7-84c2-38cba8e30950",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "a = -norm.ppf(0.995/2)\n",
+        "print(\"a = {}\".format(np.round(a, decimals = 4)))"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a = 0.0063\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -150,33 +213,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-ESxt4eOXYxT"
+        "id": "-ESxt4eOXYxT",
+        "outputId": "0622af61-4722-4c09-88e5-b9a3c4e41434",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "a = -t.ppf((1-0.5)/2, df = 4)\n",
+        "print(\"a = {}\".format(np.round(a, decimals = 4)))"
       ],
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "89iZOm_-XsHy"
-      },
-      "source": [
-        "#2) Asymmetric central probability: Find $a$ such that $P(-2a<T_{_{\\nu = 4}} < a) = 0.75$"
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a = 0.7407\n"
+          ],
+          "name": "stdout"
+        }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "g29WL_FmXzBl"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 2,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -184,19 +240,32 @@
         "id": "M3xNlLIfX2MA"
       },
       "source": [
-        "#3) One-tailed extreme: Find $a$ such that $P(T_{_{\\nu = 4}} < -a) = 0.1$"
+        "##2) One-tailed extreme: Find $a$ such that $P(T_{_{\\nu = 4}} < -a) = 0.1$"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MbFu33f6X8Sv"
+        "id": "MbFu33f6X8Sv",
+        "outputId": "d65a3c95-7240-4dde-f7fd-d0de26d7960c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "a = -t.ppf(0.1, df = 4)\n",
+        "print(\"a = {}\".format(np.round(a, decimals = 4)))"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a = 1.5332\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -204,19 +273,32 @@
         "id": "gnV8JTvSX-GU"
       },
       "source": [
-        "#4) Two-tailed extreme: Find $a$ such that $P(|T_{_{\\nu = 4}}| > a) = 0.995$"
+        "#3) Two-tailed extreme: Find $a$ such that $P(|T_{_{\\nu = 4}}| > a) = 0.995$"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CPl4UWbZYBhu"
+        "id": "CPl4UWbZYBhu",
+        "outputId": "3a2df761-27cf-4786-dffe-9e3fb4ece7cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "a = -t.ppf(0.995/2, df = 4)\n",
+        "print(\"a = {}\".format(np.round(a, decimals = 4)))"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a = 0.0067\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -257,7 +339,7 @@
       "source": [
         ""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +359,7 @@
       "source": [
         ""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +381,7 @@
       "source": [
         "m = np.array([0.2, 0.35, 0.25])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +402,7 @@
       "source": [
         ""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -340,7 +422,7 @@
       "source": [
         ""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -360,7 +442,7 @@
       "source": [
         ""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     }
   ]
